--- a/client/package.json
+++ b/client/package.json
@@ -3,12 +3,15 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "@testing-library/jest-dom": "^5.16.4",
-    "@testing-library/react": "^12.1.4",
-    "@testing-library/user-event": "^13.5.0",
-    "react": "^18.0.0",
-    "react-dom": "^18.0.0",
-    "react-scripts": "5.0.0",
+    "@hookform/resolvers": "^2.8.0",
+    "history": "^4.10.1",
+    "react": "^17.0.2",
+    "react-dom": "^17.0.2",
+    "react-hook-form": "^7.15.1",
+    "react-router-dom": "^5.3.0",
+    "react-scripts": "4.0.3",
+    "recoil": "^0.4.1",
+    "yup": "^0.32.9",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
