--- a/server/package.json
+++ b/server/package.json
@@ -7,7 +7,8 @@
     "start:watch": "nodemon ./bin/www",
     "test": "jest",
     "test:watch": "jest --watch",
-    "test-coverage": "jest --collect-coverage"
+    "test-coverage": "jest --collect-coverage",
+    "documentation": "jsdoc -c jsdoc.conf.json "
   },
   "dependencies": {
     "cookie-parser": "~1.4.4",
@@ -22,6 +23,7 @@
   "devDependencies": {
     "cors": "^2.8.5",
     "jest": "^27.5.1",
+    "jsdoc": "^3.6.10",
     "supertest": "^6.2.2"
   }
 }
